[package]
name = "nhmoon"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
ratatui = { version = "0.24.0", default-features = false, features = ["crossterm"] }
time = { version = "0.3.30", features = ["local-offset"] }

[dev-dependencies]
rstest = { version = "0.18.2", default-features = false }
