[package]
name = "nhmoon"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Scrollable terminal calendar highlighting NetHack's new & full moons"
authors = ["John Thorvald Wodder II <nhmoon@varonathe.org>"]
repository = "https://github.com/jwodder/nhmoon"
documentation = "https://github.com/jwodder/nhmoon"
license = "MIT"
exclude = ["/.*"]
publish = false

[dependencies]
anyhow = "1.0.75"
crossterm = "0.27.0"
lexopt = "0.3.0"
ratatui = { version = "0.24.0", default-features = false, features = ["crossterm"] }
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["local-offset", "macros", "parsing"] }
